# Visual-Asset-Retrieval

./: .gitignore  README.md  evaluation.py  main.py  metadata.json  pyproject.toml  requirements.txt  ruff.toml  semantic_search.py  semantic_search_explorer.ipynb
notebooks/: semantic_search_explorer.ipynb
semantic_search/: config.py  dataset.py  demo.py  evaluation.py  utils.py
src/semantic_search/: __init__.py  config.py  dataset.py  encoder.py  evaluation.py  graph.py  graph_query.py  graph_viz.py  image_server.py  index.py  model.py  rag.py  search.py  utils.py
