[project]
name = "visual"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrea D'Amicis"}
]
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.0.0)",
    "torchvision (>=0.15.0)",
    "transformers (>=4.35.0)",
    "faiss-cpu (>=1.7.4)",
    "pillow (>=9.0.0)",
    "tqdm (>=4.65.0)",
    "requests (>=2.28.0)",
    "numpy (>=1.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
